spec/error_logical_arg_type.expected
spec/error_logical_arg_type.kex:4:16: error: `both` expects argument 1 to be Bool, but got Integer

both : Bool -> Bool -> Bool
Aborted: fix type errors before running (use --no-check to skip).
