spec/error_logical_arg_type.kex
# && constrains both operands to Bool; passing Integer is caught.
let both(a, b) = a && b
main do
  IO.printLine(both(42, false))
end
